# ds-project-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.repo_name }}/: .env  .pre-commit-config.yaml  .python-version  Dockerfile  Makefile  README.md  pyproject.toml
{{ cookiecutter.repo_name }}/app_fastapi/: Dockerfile  main.py  pyproject.toml
{{ cookiecutter.repo_name }}/app_streamlit/: Dockerfile  app.py  pyproject.toml  requirements.txt
{{ cookiecutter.repo_name }}/azureml/: Dockerfile  azureml_config.yaml  create_data_asset.py  process_raw_dummy.py  process_raw_dummy_job.py  pyproject.toml
{{ cookiecutter.repo_name }}/conf/: parameters.yaml
{{ cookiecutter.repo_name }}/notebooks/: 00-template.ipynb
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.package_name }}/utils/: azure_ml.py  util.py
{{ cookiecutter.repo_name }}/tests/: test_utils.py
