[project]
name = "{{ cookiecutter.package_name }}"
version = "0.0.1"
description = "{{ cookiecutter.description }}"
authors = [{ name = "{{ cookiecutter.author_name }}" }]
requires-python = ">={{ cookiecutter.minimum_python_version }}"
dependencies = [
  # Packages
  "app_fastapi",
  "app_streamlit",
  "azureml",

  # Global dependencies
  "PyYAML",

  # Conditional dependencies
  {% if cookiecutter.database_type == 'postgres' -%}
  "psycopg2-binary",
  {% elif cookiecutter.database_type == 'mysql' -%}
  "mysql-connector-python",
  {% endif -%}
]

[dependency-groups]
dev = [
  "coverage",
  "pytest",
  "ruff",
  "pre-commit",
]

[tool.setuptools]
packages = ["cascade_api"]  
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
