[project]
name = "{{ cookiecutter.package_name }}"
version = "0.0.1"
description = "{{ cookiecutter.description }}"
authors = [
  { name = "{{ cookiecutter.author_name }}" }
]
requires-python = ">={{ cookiecutter.minimum_python_version }}"
dependencies = [
  "PyYAML",
  "python-dotenv",
  {% if cookiecutter.azure_ml_project|lower in ['y', 'yes'] -%}
  "azure-ai-ml",
  "azure-identity",
  {% endif -%}
  {% if cookiecutter.database_type == 'postgres' -%}
  "psycopg2-binary",
  {% elif cookiecutter.database_type == 'mysql' -%}
  "mysql-connector-python",
  {% endif -%}
]

[project.optional-dependencies]
dev = [
  "ruff",
  "coverage",
  "pre-commit",
  "pytest",
]

[tool.setuptools]
packages = ["cascade_api"]  
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
