[project]
name = "{{ cookiecutter.package_name }}"
version = "0.0.1"
description = "{{ cookiecutter.description }}"
authors = [{ name = "{{ cookiecutter.author_name }}" }]
requires-python = ">={{ cookiecutter.minimum_python_version }}"
dependencies = [

  # Global dependencies
  "PyYAML",

  # Conditional dependencies
  {% if cookiecutter.database_type == 'postgres' -%}
  "psycopg2-binary",
  {% elif cookiecutter.database_type == 'mysql' -%}
  "mysql-connector-python",
  {% endif -%}

  # Local packages
  {% if cookiecutter.include_fastapi_app|lower in ['yes', 'y'] -%}
  "app_fastapi",
  {% endif -%}
  {% if cookiecutter.include_streamlit_app|lower in ['yes', 'y'] -%}
  "app_streamlit",
  {% endif -%}
  {% if cookiecutter.azure_ml_project|lower in ['yes', 'y'] -%}
  "azureml",
  {% endif -%}

]

[dependency-groups]
dev = [
  "coverage",
  "pytest",
  "ruff",
  "pre-commit",
]

[tool.uv.sources]
{% if cookiecutter.include_fastapi_app|lower in ['yes', 'y'] -%}
app_fastapi = { workspace = true}
{% endif -%}
{% if cookiecutter.include_streamlit_app|lower in ['yes', 'y'] -%}
app_streamlit = { workspace = true}
{% endif -%}
{% if cookiecutter.azure_ml_project|lower in ['yes', 'y'] -%}
azureml = { workspace = true}
{% endif -%}

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
