[project]
name = "{{ cookiecutter.project_name }}-fastapi-app"
version = "0.1.0"
requires-python = ">={{ cookiecutter.minimum_python_version }}"
description = "A FastAPI app for {{ cookiecutter.project_name }}"
authors = "{{ cookiecutter.author_name }}"
dependencies = ["fastapi", "uvicorn", "pydantic", "python-dotenv",]

[tool.uv]
name = "{{ cookiecutter.project_name }}-fastapi-app"
