[project]
name = "{{ cookiecutter.project_name }}-app_streamlit"
version = "0.1.0"
requires-python = ">={{ cookiecutter.minimum_python_version }}"
description = "A Streamlit app for {{ cookiecutter.project_name }}"
authors = [{ name = "{{ cookiecutter.author_name }}" }]
dependencies = [
    "src",
    "numpy", 
    "plotly", 
    "plotly-express", 
    "streamlit==1.35.0"
]

[tool.uv]
name = "{{ cookiecutter.project_name }}-app_streamlit"

[tool.uv.sources]
src = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
