[project]
name = "{{ cookiecutter.project_name }}-azureml"
version = "0.1.0"
requires-python = ">={{ cookiecutter.minimum_python_version }}"
description = "An azureml package for {{ cookiecutter.project_name }}" 
authors = "{{ cookiecutter.author_name }}"
dependencies = [
  {% if cookiecutter.azure_ml_project|lower in ['y', 'yes'] -%}
  "azure-ai-ml",
  "azure-identity",
  {% endif -%}
]

[tool.uv]
name = "{{ cookiecutter.project_name }}-azureml"
